# ultravin

./: .gitignore  ACCEPTANCE.md  AGENTS.md  BENCHMARKS.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md  RELEASE.md  TODO.md  VISION.md  docker-compose.yml  pyproject.toml
.cargo/: config.toml
.github/: stamp-version.sh
.github/actions/build-data/: action.yml
.github/workflows/: ci.yaml  release.yaml
crates/ultravin-build/: Cargo.toml
crates/ultravin-build/src/: artifact.rs  main.rs
crates/ultravin-core/: Cargo.toml  build.rs
crates/ultravin-core/benches/: decode.rs  vins.txt
crates/ultravin-core/examples/: allocs.rs  batch.rs  cold.rs  throughput.rs
crates/ultravin-core/src/: checkdigit.rs  conversion.rs  db.rs  decode.rs  errors.rs  hash.rs  lib.rs  matcher.rs  resolve.rs  tables.rs  wmi.rs  year.rs
crates/ultravin-core/tests/: decode.rs
crates/ultravin-py/: Cargo.toml
crates/ultravin-py/src/: lib.rs
docs/: ACCEPTANCE.md  BENCHMARKS.md  KNOWN_DEVIATIONS.md  RELEASE.md
python/ultravin/: __init__.py  _ultravin.pyi  cli.py
scripts/: campaign-supervisor.sh  oracle.sh  spawn_campaign.py
scripts/bench/: build_corpus.py  corpus.txt  make_chart.py  mssql_setup.py  results.json  throughput.py
scripts/parity/: __init__.py  brutal.py  campaign.py  freeze.py  generator.py  normalize.py  oracle.py  sweep.py
tests/: brutal_repros.json  parity_corpus.json  test_import.py  test_json_api.py  test_parity_corpus.py
vpic/: manifest.json
vpic/procs/: felementattributevalue.sql  ferrorvalue.sql  fextractvalidcharsperwmiyear.sql  fvalidcharsinkey.sql  fvalidcharsinregex.sql  fvincheckdigit.sql  fvincheckdigit2.sql  fvindescriptor.sql  fvinmodelyear2.sql  fvinwmi.sql  spvindecode.sql  spvindecode_core.sql  spvindecode_errorcode.sql  sqlwild_to_regex.sql
vpic/schema/: _misc.sql  _preamble.sql  constraints.sql  sequences.sql
vpic/schema/tables/: abs.sql  adaptivecruisecontrol.sql  adaptivedrivingbeam.sql  airbaglocations.sql  airbaglocfront.sql  airbaglocknee.sql  autobrake.sql  automaticpedestrainalertingsound.sql  autoreversesystem.sql  axleconfiguration.sql  batterytype.sql  bedtype.sql  blindspotintervention.sql  blindspotmonitoring.sql  bodycab.sql  bodystyle.sql  brakesystem.sql  busfloorconfigtype.sql  bustype.sql  can_aacn.sql  chargerlevel.sql  combinedbrakingsystem.sql  conversion.sql  coolingtype.sql  country.sql  custommotorcycletype.sql  daytimerunninglight.sql  decodingoutput.sql  defaultvalue.sql  defs_body.sql  defs_make.sql  defs_model.sql  destinationmarket.sql  drivetype.sql  dynamicbrakesupport.sql  ecs.sql  edr.sql  electrificationlevel.sql  element.sql  engineconfiguration.sql  (+57 more)
vpic/schema/types/: tbldecodingitem.sql
vpic/schema/views/: vncsabodytype.sql  vncsamake.sql  vncsamodel.sql
