[workspace]
resolver = "2"
members = ["crates/ultravin-core", "crates/ultravin-build", "crates/ultravin-py"]

[workspace.package]
# Permanent placeholder: real versions come from git tags (vX.Y.Z). CI stamps the
# tag version in before building wheels/sdist. See docs/RELEASE.md.
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Bryce Drennan"]
repository = "https://github.com/blackthorn-interstellar/ultravin"

[workspace.lints.clippy]
# Keep the bar high; deny on warnings is enforced in `make check`.
all = "warn"

[profile.release]
opt-level = 3
# Fat LTO (with the single codegen unit below) lets the optimizer inline the tiny,
# million-times-per-batch hot accessors across crate boundaries — db.s(), the rkyv
# `to_native()` endian reads, element_by_id, the matcher inner loops. Costs only
# build time; the decoder is throughput-first, so that trade is worth it.
lto = "fat"
codegen-units = 1
