[project]
name = "ultravin"
authors = [
    {name = "Bryce Drennan"},
]
description = "Pure-Rust NHTSA vPIC VIN decoder — CLI + library, with spVinDecode parity."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "typer",
]
license = "MIT"

[project.scripts]
ultravin = "ultravin.cli:main"

[dependency-groups]
dev = [
    "coverage",
    "maturin>=1.7,<2",
    "psycopg[binary]>=3.3.4",
    "pytest",
    "pytest-asyncio",
    "pytest-randomly",
    "pytest-sugar",
    "ruff",
    "ty",
]

[project.urls]
Documentation = "https://github.com/blackthorn-interstellar/ultravin"
Source = "https://github.com/blackthorn-interstellar/ultravin"

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "ultravin._ultravin"
manifest-path = "crates/ultravin-py/Cargo.toml"
features = ["pyo3/extension-module"]
# The decoder embeds vpic.rkyv via include_bytes!. It's a gitignored build
# product (deterministically rebuilt from the pinned dump), so ship it inside the
# sdist — otherwise a `pip install` that falls back to source compiles an empty
# artifact (build.rs's stub) and decodes nothing. CI materializes it first.
# vpic.rkyv: see above. LICENSE: maturin records `License-File: LICENSE` in the
# metadata and embeds it in wheels, but doesn't pack the root LICENSE into the
# sdist (it's outside the ultravin-py manifest dir) — PyPI then rejects the sdist
# for a declared-but-absent license file. Include it explicitly so they agree.
include = [
    { path = "crates/ultravin-core/data/vpic.rkyv", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]

[tool.ruff]
extend-exclude = []
line-length = 120
output-format = "concise"

[tool.ruff.lint]
extend-ignore = [
    "E501",
    "G004",
    "ISC001",
    "PT011",
    "RET504",
    "SIM114",
    "TC002", "TC003",
    "TRY003", "TRY400", "TRY401",
    "RUF012", "RUF100"
]
extend-select = [
    "I", "E", "W", "UP", "ASYNC", "BLE", "A001", "A002",
    "C4", "DTZ", "T10", "EM", "ISC", "ICN", "G", "PIE", "PT",
    "Q", "SIM", "TID", "TCH", "PLC", "PLE", "TRY", "RUF"
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-errmsg]
max-string-length = 50

[tool.pytest.ini_options]
addopts = "-s --tb=short -v --durations=10"
norecursedirs = ["build", "dist", "target"]
asyncio_default_fixture_loop_scope = "function"

[tool.ty.terminal]
output-format = "concise"

[tool.ty.rules]
missing-argument = "ignore"
# buggy with nonlocal
unresolved-reference = "ignore"
