[package]
name = "ultravin-build"
description = "Deterministic vPIC dump importer and artifact builder for ultravin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "vpic-import"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
ultravin-core = { version = "0.1.0", path = "../ultravin-core" }
blake3 = "1.8.5"

[lints]
workspace = true
