[package]
name = "ultravin-py"
description = "PyO3 bindings for the ultravin VIN decoder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "_ultravin"
crate-type = ["cdylib"]

[dependencies]
ultravin-core = { path = "../ultravin-core" }
# generate-import-lib lets the Windows aarch64 wheel cross-compile with no arm
# Python present (it synthesizes the python3.dll import lib); inert off Windows.
pyo3 = { version = "0.23", features = ["abi3-py310", "extension-module", "generate-import-lib"] }

[lints]
workspace = true
